--- a/kern/arch/i386/Makefile.am
+++ b/kern/arch/i386/Makefile.am
@@ -29,7 +29,8 @@ noinst_LTLIBRARIES = \
 	libarch.la
 
 libentry_la_SOURCES = \
-	entry.S
+	entry.S \
+	entryother.S
 
 libarch_la_SOURCES = \
 	arch_early_init.c \
